updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a Poker dealer and wannabe techie</p>
+      <h1>where I`m from</h1>
+      <p>Duluth, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Science and technology, health and fitness, music, speach ad debate</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Organic farmer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Eagan, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to work from home to cut my carbon footprint</p>
     </section>
 
     <footer id="footer">
